--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^5.0.1",
+    "style-loader": "^2.0.0",
+    "styles-loader": "^3.0.0",
     "webpack": "^5.10.1",
     "webpack-cli": "^4.2.0"
   }
