--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "webpack": "webpack --watch",
+    "serve": "live-server public",
+    "build": "babel src/app.js --out-file=public/bundle.js --presets=env,react --watch"
   },
   "repository": {
     "type": "git",
@@ -17,6 +19,13 @@
   },
   "homepage": "https://github.com/mahassan/webpack-practice#readme",
   "dependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-preset-env": "^1.5.2",
+    "babel-preset-react": "^6.24.1",
+    "live-server": "^1.2.1",
     "webpack": "^5.21.2"
+  },
+  "devDependencies": {
+    "webpack-cli": "^4.5.0"
   }
 }
